--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,16 @@
 
 	<display-name>To do List</display-name>
 
+	<servlet>
+       <servlet-name>post</servlet-name>
+       <servlet-class>webapp.PostServlet</servlet-class>
+    </servlet>
+ 
+    <servlet-mapping>
+       <servlet-name>post</servlet-name>
+       <url-pattern>/post</url-pattern>
+    </servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>login.do</welcome-file>
 	</welcome-file-list>
