--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,16 @@
        <servlet-name>post</servlet-name>
        <url-pattern>/post</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+       <servlet-name>signup</servlet-name>
+       <servlet-class>webapp.SignupServlet</servlet-class>
+    </servlet>
+ 
+    <servlet-mapping>
+       <servlet-name>signup</servlet-name>
+       <url-pattern>/signup</url-pattern>
+    </servlet-mapping>
 
 	<welcome-file-list>
 		<welcome-file>login.do</welcome-file>
