--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,16 @@
     </servlet-mapping>
     
     <servlet>
+       <servlet-name>login</servlet-name>
+       <servlet-class>webapp.LoginServlet</servlet-class>
+    </servlet>
+ 
+    <servlet-mapping>
+       <servlet-name>login</servlet-name>
+       <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
        <servlet-name>signup</servlet-name>
        <servlet-class>webapp.SignupServlet</servlet-class>
     </servlet>
