Search.jsp created

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,17 @@
        <servlet-name>signup</servlet-name>
        <url-pattern>/signup</url-pattern>
     </servlet-mapping>
-
+    
+	<servlet>
+       <servlet-name>search</servlet-name>
+       <servlet-class>webapp.SearchServlet</servlet-class>
+    </servlet>
+ 
+    <servlet-mapping>
+       <servlet-name>search</servlet-name>
+       <url-pattern>/search</url-pattern>
+    </servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>login.do</welcome-file>
 	</welcome-file-list>
