DisplayBookServlet completed and search functionality added

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,7 @@
     
 	<servlet>
        <servlet-name>search</servlet-name>
-       <servlet-class>webapp.SearchServlet</servlet-class>
+       <servlet-class>webapp.DisplayBookServlet</servlet-class>
     </servlet>
  
     <servlet-mapping>
